// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton accepts color 1`] = `
.c4 {
  width: 18px;
  height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.75rem;
  height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding: 0rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: transparent;
  border: 1px solid transparent;
  color: #CC1F36;
}

.c1 .c5 {
  width: 12px;
  height: 12px;
}

.c1:active,
.c1.active {
  background: #FFE5E9;
  border-color: #FFE5E9;
  color: #ED3B53;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #FFF2F4;
  border-color: #FFF2F4;
  color: #ED3B53;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  color: #CC1F36;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 svg {
  pointer-events: none;
}

<button
  aria-describedby="37c6441a-6fd1-4b0a-ac98-8e3a0c83418d"
  className="c0 c1 c2"
  color="danger"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  size="xsmall"
  type="button"
  width={24}
>
  <div
    className="c3"
  >
    Test
  </div>
  <div
    aria-hidden={true}
    className="c4 "
    size={18}
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        Favorite
      </title>
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
  </div>
</button>
`;

exports[`IconButton accepts events 1`] = `
.c4 {
  width: 18px;
  height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.75rem;
  height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding: 0rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: transparent;
  border: 1px solid transparent;
  color: #939BA5;
}

.c1 .c5 {
  width: 12px;
  height: 12px;
}

.c1:active,
.c1.active {
  background: #F5F6F7;
  border-color: #F5F6F7;
  color: #4C535B;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #FBFBFC;
  border-color: #FBFBFC;
  color: #4C535B;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  color: #939BA5;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 svg {
  pointer-events: none;
}

<button
  aria-describedby="5a7444d4-f28b-45ef-ac37-ae416ca1df11"
  className="c0 c1 c2"
  color="neutral"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  size="xsmall"
  type="button"
  width={24}
>
  <div
    className="c3"
  >
    Test
  </div>
  <div
    aria-hidden={true}
    className="c4 "
    size={18}
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        Favorite
      </title>
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
  </div>
</button>
`;

exports[`IconButton accepts events 2`] = `
.c4 {
  width: 18px;
  height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.75rem;
  height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding: 0rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: transparent;
  border: 1px solid transparent;
  color: #939BA5;
}

.c1 .c5 {
  width: 12px;
  height: 12px;
}

.c1:active,
.c1.active {
  background: #F5F6F7;
  border-color: #F5F6F7;
  color: #4C535B;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #FBFBFC;
  border-color: #FBFBFC;
  color: #4C535B;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  color: #939BA5;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 svg {
  pointer-events: none;
}

<button
  aria-describedby="bf451fae-2f0d-45d5-97c6-6e3d1d46f250"
  className="c0 c1 c2"
  color="neutral"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  size="xsmall"
  type="button"
  width={24}
>
  <div
    className="c3"
  >
    Test
  </div>
  <div
    aria-hidden={true}
    className="c4 "
    size={18}
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        Favorite
      </title>
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
  </div>
</button>
`;

exports[`IconButton allows for ARIA attributes 1`] = `
.c4 {
  width: 18px;
  height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.75rem;
  height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding: 0rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: transparent;
  border: 1px solid transparent;
  color: #939BA5;
}

.c1 .c5 {
  width: 12px;
  height: 12px;
}

.c1:active,
.c1.active {
  background: #F5F6F7;
  border-color: #F5F6F7;
  color: #4C535B;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #FBFBFC;
  border-color: #FBFBFC;
  color: #4C535B;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  color: #939BA5;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 svg {
  pointer-events: none;
}

<button
  aria-describedby="e2f8f893-c4ab-4370-92b2-95c806c76d3a"
  aria-haspopup={true}
  className="c0 c1 c2"
  color="neutral"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  size="xsmall"
  type="button"
  width={24}
>
  <div
    className="c3"
  >
    Test
  </div>
  <div
    aria-hidden={true}
    className="c4 "
    size={18}
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        Favorite
      </title>
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
  </div>
</button>
`;

exports[`IconButton default 1`] = `
.c4 {
  width: 18px;
  height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.75rem;
  height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding: 0rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: transparent;
  border: 1px solid transparent;
  color: #939BA5;
}

.c1 .c5 {
  width: 12px;
  height: 12px;
}

.c1:active,
.c1.active {
  background: #F5F6F7;
  border-color: #F5F6F7;
  color: #4C535B;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #FBFBFC;
  border-color: #FBFBFC;
  color: #4C535B;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  color: #939BA5;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 svg {
  pointer-events: none;
}

<button
  aria-describedby="9bb4166e-bd6f-45b1-91e8-9de1bb318ecf"
  className="c0 c1 c2"
  color="neutral"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  size="xsmall"
  type="button"
  width={24}
>
  <div
    className="c3"
  >
    Test
  </div>
  <div
    aria-hidden={true}
    className="c4 "
    size={18}
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        Favorite
      </title>
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
  </div>
</button>
`;

exports[`IconButton outline 1`] = `
.c4 {
  width: 18px;
  height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.75rem;
  height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding: 0rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: transparent;
  border: 1px solid transparent;
  color: #939BA5;
}

.c1 .c5 {
  width: 12px;
  height: 12px;
}

.c1:active,
.c1.active {
  background: #F5F6F7;
  border-color: #F5F6F7;
  color: #4C535B;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #FBFBFC;
  border-color: #FBFBFC;
  color: #4C535B;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  color: #939BA5;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 {
  border: 1px solid #C1C6CC;
}

.c2:hover,
.c2:focus,
.c2.hover {
  border-color: #939BA5;
}

.c2:active,
.c2.active {
  border-color: #939BA5;
}

.c2[disabled]:hover,
.c2[disabled]:active,
.c2[disabled]:focus {
  border-color: #C1C6CC;
}

.c2 svg {
  pointer-events: none;
}

<button
  aria-describedby="fa0872db-26b0-4ab1-87db-35c288ce68a5"
  className="c0 c1 c2"
  color="neutral"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  size="xsmall"
  type="button"
  width={24}
>
  <div
    className="c3"
  >
    Test
  </div>
  <div
    aria-hidden={true}
    className="c4 "
    size={18}
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        Favorite
      </title>
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
  </div>
</button>
`;

exports[`IconButton renders focus ring on tab input but not on click 1`] = `
.c4 {
  width: 18px;
  height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.75rem;
  height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding: 0rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: transparent;
  border: 1px solid transparent;
  color: #CC1F36;
}

.c1 .c5 {
  width: 12px;
  height: 12px;
}

.c1:active,
.c1.active {
  background: #FFE5E9;
  border-color: #FFE5E9;
  color: #ED3B53;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #FFF2F4;
  border-color: #FFF2F4;
  color: #ED3B53;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  color: #CC1F36;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 svg {
  pointer-events: none;
}

<button
  aria-describedby="882e1284-9397-4b34-9217-194d9d6df0b5"
  className="c0 c1 c2"
  color="danger"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  size="xsmall"
  type="button"
  width={24}
>
  <div
    className="c3"
  >
    Favorite
  </div>
  <div
    aria-hidden={true}
    className="c4 "
    size={18}
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        Favorite
      </title>
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
  </div>
</button>
`;

exports[`IconButton renders focus ring on tab input but not on click 2`] = `
.c4 {
  width: 18px;
  height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.75rem;
  height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding: 0rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: transparent;
  border: 1px solid transparent;
  color: #CC1F36;
}

.c1 .c5 {
  width: 12px;
  height: 12px;
}

.c1:active,
.c1.active {
  background: #FFE5E9;
  border-color: #FFE5E9;
  color: #ED3B53;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #FFF2F4;
  border-color: #FFF2F4;
  color: #ED3B53;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  color: #CC1F36;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 svg {
  pointer-events: none;
}

<button
  aria-describedby="0ea83bf9-f88a-4c52-97cf-d74928229922"
  className="c0 c1 c2"
  color="danger"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  size="xsmall"
  type="button"
  width={24}
>
  <div
    className="c3"
  >
    Trash
  </div>
  <div
    aria-hidden={true}
    className="c4 "
    size={18}
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        Trash
      </title>
      <path
        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        fill="currentColor"
      />
    </svg>
  </div>
</button>
`;

exports[`IconButton resized 1`] = `
.c4 {
  width: 38px;
  height: 38px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  width: 44px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 1.375rem;
  height: 44px;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  padding: 0rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: transparent;
  border: 1px solid transparent;
  color: #939BA5;
}

.c1 .c5 {
  width: 18px;
  height: 18px;
}

.c1:active,
.c1.active {
  background: #F5F6F7;
  border-color: #F5F6F7;
  color: #4C535B;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #FBFBFC;
  border-color: #FBFBFC;
  color: #4C535B;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  color: #939BA5;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 svg {
  pointer-events: none;
}

<button
  aria-describedby="b5f81da0-e0cc-4d05-9e22-5cb280516b43"
  className="c0 c1 c2"
  color="neutral"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  size="large"
  type="button"
  width={44}
>
  <div
    className="c3"
  >
    Test
  </div>
  <div
    aria-hidden={true}
    className="c4 "
    size={38}
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        Favorite
      </title>
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
  </div>
</button>
`;
